--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,81 +1,7 @@
 {
-  "editor.formatOnSave": true,
-  "files.associations": {
-	"array": "cpp",
-	"atomic": "cpp",
-	"bit": "cpp",
-	"*.tcc": "cpp",
-	"bitset": "cpp",
-	"cctype": "cpp",
-	"chrono": "cpp",
-	"clocale": "cpp",
-	"cmath": "cpp",
-	"condition_variable": "cpp",
-	"csignal": "cpp",
-	"cstdarg": "cpp",
-	"cstddef": "cpp",
-	"cstdint": "cpp",
-	"cstdio": "cpp",
-	"cstdlib": "cpp",
-	"cstring": "cpp",
-	"ctime": "cpp",
-	"cwchar": "cpp",
-	"cwctype": "cpp",
-	"deque": "cpp",
-	"list": "cpp",
-	"map": "cpp",
-	"set": "cpp",
-	"unordered_map": "cpp",
-	"unordered_set": "cpp",
-	"vector": "cpp",
-	"exception": "cpp",
-	"algorithm": "cpp",
-	"functional": "cpp",
-	"iterator": "cpp",
-	"memory": "cpp",
-	"memory_resource": "cpp",
-	"numeric": "cpp",
-	"optional": "cpp",
-	"random": "cpp",
-	"ratio": "cpp",
-	"string": "cpp",
-	"string_view": "cpp",
-	"system_error": "cpp",
-	"tuple": "cpp",
-	"type_traits": "cpp",
-	"utility": "cpp",
-	"fstream": "cpp",
-	"future": "cpp",
-	"initializer_list": "cpp",
-	"iomanip": "cpp",
-	"iosfwd": "cpp",
-	"iostream": "cpp",
-	"istream": "cpp",
-	"limits": "cpp",
-	"mutex": "cpp",
-	"new": "cpp",
-	"ostream": "cpp",
-	"sstream": "cpp",
-	"stdexcept": "cpp",
-	"streambuf": "cpp",
-	"thread": "cpp",
-	"cinttypes": "cpp",
-	"typeinfo": "cpp",
-	"variant": "cpp",
-	"any": "cpp",
-	"charconv": "cpp",
-	"codecvt": "cpp",
-	"compare": "cpp",
-	"concepts": "cpp",
-	"coroutine": "cpp",
-	"forward_list": "cpp",
-	"format": "cpp",
-	"numbers": "cpp",
-	"ranges": "cpp",
-	"semaphore": "cpp",
-	"shared_mutex": "cpp",
-	"span": "cpp",
-	"stop_token": "cpp",
-	"valarray": "cpp"
-}
+	"editor.formatOnSave": true,
+	"C_Cpp.intelliSenseEngine": "default",
+	"C_Cpp.default.intelliSenseMode": "linux-clang-x64",
+	"C_Cpp.default.cppStandard": "c++23",
+	"C_Cpp.default.cStandard": "c23"
 }
