math_utilsおよびlibformatモジュールを削除し、printおよびlogモジュールを新規作成。CMakeLists.txtを更新して新しいモジュールを追加。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(${PROJECT_NAME}
     src/main.cpp
 	src/lib/print.cpp
 	src/lib/log.cpp
+	src/util/register.cpp
 )
 
 # add_library(math_utils OBJECT src/lib/math_utils.cppm)
