lavacopクラスを追加し、グローバル変数LCを定義。ログ機能を改善し、メッセージ作成イベントに検索機能を追加。CMakeLists.txtを更新。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(${PROJECT_NAME}
 	src/events/slashcommandsCreate.cpp
 	src/lavacop/lavacop.cpp
 	src/lavacop/src/lavalink.cpp
+	src/global.cpp
 )
 
 # add_library(math_utils OBJECT src/lib/math_utils.cppm)
