音楽再生コマンドにping機能を追加し、スラッシュコマンドの初期化処理を実装。pingコマンドの処理をcommandsモジュールに統合。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,7 @@
 		"complex": "cpp",
 		"source_location": "cpp",
 		"cinttypes": "cpp",
-		"typeindex": "cpp"
+		"typeindex": "cpp",
+		"__nullptr": "cpp"
 	}
 }
