CLIコマンド処理を追加し、デバイス情報を表示する機能を実装。装飾用の関数を追加し、CMake設定を更新。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,9 @@ add_executable(${PROJECT_NAME}
 	src/lib/print.cpp
 	src/lib/log.cpp
 	src/util/register.cpp
+	src/util/device.cpp
+	src/util/decoration.cpp
+	src/util/textcommands.cpp
 	src/events/messageCreate.cpp
 	src/events/slashcommandsCreate.cpp
 	src/lavacop/lavacop.cpp
