プレイコマンドの実装と関連機能の追加。音楽トラックの再生、ボイスチャンネルの確認、エラーハンドリングを強化。設定ファイルの更新と不要なコードの削除を実施。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,7 @@
 		"source_location": "cpp",
 		"cinttypes": "cpp",
 		"typeindex": "cpp",
-		"__nullptr": "cpp"
+		"__nullptr": "cpp",
+		"__split_buffer": "cpp"
 	}
 }
