--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -25,32 +25,28 @@ jobs:
       run: |
         git clone https://github.com/brainboxdotcc/DPP.git
         cd DPP
-        cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        cmake --build build --target install
+        sudo cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        sudo cmake --build build --target install
         cd ..
 
     - name: Install libhv
       run: |
         git clone https://github.com/ithewei/libhv.git
         cd libhv
-        cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        cmake --build build --target install
+        sudo cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        sudo cmake --build build --target install
         cd ..
 
     - name: Install nlohmann::json
       run: |
         git clone https://github.com/nlohmann/json.git
         cd json
-        cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_TESTING=OFF
-        cmake --build build --target install
+        sudo cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_TESTING=OFF
+        sudo cmake --build build --target install
         cd ..
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: sudo cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
-    - name: Test
-      working-directory: ${{github.workspace}}/build
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run: sudo cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
