--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -50,3 +50,9 @@ jobs:
 
     - name: Build
       run: sudo cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j8
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-artifact
+        path: ${{github.workspace}}/build/349Bot
