--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -17,83 +17,42 @@ jobs:
     # ソースコードのチェックアウト
     - uses: actions/checkout@v4
 
-    # キャッシュを使ったaptパッケージのインストール
-    - name: Cache apt packages
-      uses: actions/cache@v4
-      with:
-        path: /var/cache/apt
-        key: ${{ runner.os }}-apt-${{ hashFiles('apt-dependencies.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-apt-
-
+    # 必要な依存関係のインストール（sudoを使用）
     - name: Install dependencies
       run: |
-        echo "build-essential cmake git libssl-dev zlib1g-dev libopus-dev python3 python3-pip" > apt-dependencies.txt
         sudo apt-get update
-        sudo apt-get install -y $(cat apt-dependencies.txt)
+        sudo apt-get install -y build-essential cmake git libssl-dev zlib1g-dev libopus-dev python3 python3-pip
         python3 -m pip install -U pip
-        python3 -m pip install gn ninja
+        sudo python3 -m pip install gn ninja
 
-    # キャッシュを使ったDPPのビルド
-    - name: Cache DPP build
-      uses: actions/cache@v4
-      with:
-        path: ./DPP/build
-        key: dpp-${{ hashFiles('DPP/CMakeLists.txt') }}
-        restore-keys: |
-          dpp-
-
+    # DPPのビルドとインストール（sudoを使用）
     - name: Build and Install DPP
       run: |
         git clone https://github.com/brainboxdotcc/DPP.git
         cd DPP
-        cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        cmake --build build --target install -j8
+        sudo cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        sudo cmake --build build --target install -j8
         cd ..
 
-    # キャッシュを使ったlibhvのビルド
-    - name: Cache libhv build
-      uses: actions/cache@v4
-      with:
-        path: ./libhv/build
-        key: libhv-${{ hashFiles('libhv/CMakeLists.txt') }}
-        restore-keys: |
-          libhv-
-
+    # libhvのビルドとインストール（sudoを使用）
     - name: Build and Install libhv
       run: |
         git clone https://github.com/ithewei/libhv.git
         cd libhv
-        cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        cmake --build build --target install -j8
+        sudo cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        sudo cmake --build build --target install -j8
         cd ..
 
-    # キャッシュを使ったnlohmann::jsonのビルド
-    - name: Cache nlohmann::json build
-      uses: actions/cache@v4
-      with:
-        path: ./json/build
-        key: nlohmann-json-${{ hashFiles('json/CMakeLists.txt') }}
-        restore-keys: |
-          nlohmann-json-
-
+    # nlohmann::jsonのビルドとインストール（sudoを使用）
     - name: Build and Install nlohmann::json
       run: |
         git clone https://github.com/nlohmann/json.git
         cd json
-        cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_TESTING=OFF
-        cmake --build build --target install -j8
+        sudo cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_TESTING=OFF
+        sudo cmake --build build --target install -j8
         cd ..
 
-    # キャッシュを使ったSkiaのビルド
-    - name: Cache Skia build
-      uses: actions/cache@v4
-      with:
-        path: ./skia/out/Release
-        key: skia-${{ hashFiles('skia/DEPS') }}
-        restore-keys: |
-          skia-
-
+    # Skiaのビルドとインストール（sudoを使用）
     - name: Build and Install Skia
       run: |
         git clone https://skia.googlesource.com/skia.git
@@ -102,17 +61,17 @@ jobs:
         if [ ! -d "out/Release" ]; then
           mkdir -p out/Release
         fi
-        gn gen out/Release --args='is_official_build=true skia_enable_gpu=true'
-        ninja -C out/Release skia
+        sudo gn gen out/Release --args='is_official_build=true skia_enable_gpu=true'
+        sudo ninja -C out/Release skia
         cd ..
 
-    # CMakeの構成
+    # CMakeの構成（sudoを使用）
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: sudo cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-    # 並列ビルドとターゲットの最小化
+    # ビルド（sudoを使用）
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j8 --target 349Bot
+      run: sudo cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j8 --target 349Bot
 
     # アーティファクトのアップロード
     - name: Upload artifact
