--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -20,6 +20,7 @@ jobs:
     # 必要な依存関係のインストール（sudoを使用）
     - name: Install dependencies
       run: |
+        sudo chmod -R 777 /root/skia
         sudo apt-get update
         sudo apt-get install -y build-essential cmake git libssl-dev zlib1g-dev libopus-dev python3 python3-pip
         python3 -m pip install -U pip
