--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         sudo mkdir /root/skia
         sudo chmod -R 777 /root/skia
+        sudo rm /root/skia
         sudo apt-get update
         sudo apt-get install -y build-essential cmake git libssl-dev zlib1g-dev libopus-dev python3 python3-pip
         python3 -m pip install -U pip
@@ -60,7 +61,7 @@ jobs:
         git clone 'https://chromium.googlesource.com/chromium/tools/depot_tools.git'
         export PATH="${PWD}/depot_tools:${PATH}"
         sudo git clone https://skia.googlesource.com/skia.git /root/skia
-        cd /root/skia
+        sudo cd /root/skia
         sudo python3 tools/git-sync-deps
         sudo python3 bin/fetch-ninja
         sudo tools/install_dependencies.sh
