--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         sudo mkdir /root/skia
         sudo chmod -R 777 /root/skia
-        sudo rm /root/skia
+        sudo rm -rf /root/skia
         sudo apt-get update
         sudo apt-get install -y build-essential cmake git libssl-dev zlib1g-dev libopus-dev python3 python3-pip
         python3 -m pip install -U pip
