--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -36,6 +36,7 @@ jobs:
         sudo apt-get install -y build-essential cmake git libssl-dev zlib1g-dev libopus-dev python3 python3-pip
         python3 -m pip install -U pip
         sudo python3 -m pip install gn ninja
+        sudo apt-get install -y freeglut3-dev libfontconfig-dev libfreetype6-dev libgl1-mesa-dev libglu1-mesa-dev libharfbuzz-dev libicu-dev libjpeg-dev libpng-dev libwebp-dev libx11-xcb-dev libxcb-xkb-dev xcb
 
     # Python パッケージキャッシュの復元
     - name: Cache Python packages
